--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,4 +24,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSHKEY }}
-          script: "cd www/mindclound && ./.scripts/deploy.sh"
+          script: "cd www/mindcloud && ./.scripts/deploy.sh"
