--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.1",
         "bootstrap-icons": "^1.9.1"
     }
 }
